2008-07-24  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (Descuento): Fixed some problem to calculate percent
	from an amount of money.
	Deleted some commented code.

2008-07-23  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (TipoVenta): Set the focus to entry_discount_money
	every time the window it's called.

	* utils.c (display_calendar): Added calendar_focus_out() to
	handler "focus-out-event" event, this will destroy the widget if
	the user release the focus of the calendar. Now display_calender
	sets the current date as the one on the entry if has one.

	* compras.c (on_btn_remove_buy_product_clicked): Added
	function. It must remove a product from the products buy list.
	(on_button_buy_clicked): Check if we really have products on the
	buy list.
	(Save): Added SearchPoroductHistory() FillFields() at the end to
	reflect changes on the proper tab.
	(on_buy_notebook_switch_page): Deleted some commented code.

2008-07-22  Jonathan Gonzalez V.  <zeus@gnu.org>

	* ventas.c (Descuento): Deleted commented code.
	(TipoVenta): Use clean_container() to clean up the container
	tipo_venta_win_venta.
	(Descuento): Fixed function to deal better with percent and money
	discount.
	(on_btn_nullify_search_clicked): Fixed to properly free the memory
	allocated by condition var.
	(on_selection_nullify_sales_change): Fixed query to not include
	the products already nullified.

2008-07-17  Jonathan Gonzalez V.  <zeus@gnu.org>

	* rizoma-config.c: Deleted include of libgksu.h

2008-07-14  Jonathan Gonzalez V.  <zeus@gnu.org>

	* administracion_productos.c (AjustarMercaderia): Let user adjust
	to zero a stock product.

2008-07-11  Jonathan Gonzalez V.  <zeus@gnu.org>

	* credito.c (ClientStatus, CloseClientStatus): Deleted function.

	* postgres-functions.c (ReturnClientCredit): Changed the return
	type from gchar * to gint.

	* ventas.c (CloseWindowClientSelection, WindowClientSelection)
	(SeleccionarCliente, SelectClient, AddDataEmisor, CancelarTipo):
	Deleted functions.
