@@ -394,9 +394,6 @@ DatosCheque (void)
   gtk_box_pack_end (GTK_BOX (hbox), button, FALSE, FALSE, 3);
   gtk_widget_show (button);
 
-  /* g_signal_connect (G_OBJECT (button), "clicked", */
-  /*                   G_CALLBACK (Vender), (gpointer)window); */
-
   frame = gtk_frame_new ("Datos Cheque");
   gtk_box_pack_start (GTK_BOX (vbox), frame, FALSE, FALSE, 3);
   gtk_widget_show (frame);
@@ -532,408 +529,6 @@ CancelarTipo (GtkWidget *widget, gpointer data)
   closing_tipos = FALSE;
 }
 
-/* void */
-/* FillDatosVenta (GtkWidget *widget, gpointer data) */
-/* { */
-/*   GtkWidget *window; */
-/*   GtkWidget *hbox; */
-/*   GtkWidget *vbox; */
-
-/*   GtkWidget *vbox2; */
-/*   GtkWidget *frame; */
-/*   GtkWidget *button; */
-/*   GtkWidget *label; */
-
-/*   tipo_venta = (gchar *) data; */
-/*   if (widget != NULL) */
-/*     gtk_widget_destroy (gtk_widget_get_toplevel (widget)); */
-
-/*   if (tipo_documento == FACTURA || tipo_documento == GUIA) */
-/*     { */
-/*       if (strcmp (tipo_venta, "cheque") == 0) */
-/*         venta->tipo_venta = CHEQUE; */
-/*       else if (strcmp (tipo_venta, "tarjeta") == 0) */
-/*         venta->tipo_venta = TARJETA; */
-/*       else if (strcmp (tipo_venta, "credito") == 0) */
-/*         venta->tipo_venta = CREDITO; */
-
-/*       gtk_widget_set_sensitive (venta->forma_pago, FALSE); */
-
-/*       switch (venta->tipo_venta) */
-/*         { */
-/*         case CHEQUE: */
-/*           gtk_label_set_markup (GTK_LABEL (venta->venta_pago), */
-/*                                 g_strdup_printf ("<b>Cheque</b>")); */
-/*           gtk_widget_set_sensitive (venta->window, FALSE); */
-/*           DatosCheque (); */
-/*           break; */
-/*         case TARJETA: */
-/*           gtk_label_set_markup (GTK_LABEL (venta->venta_pago), */
-/*                                 g_strdup_printf ("<b>Tarjeta</b>")); */
-/*           break; */
-/*         case CREDITO: */
-/*           gtk_label_set_markup (GTK_LABEL (venta->venta_pago), */
-/*                                 g_strdup_printf ("<b>Credito</b>")); */
-/*           gtk_widget_set_sensitive (venta->window, TRUE); */
-/*           gtk_widget_set_sensitive (venta->forma_pago, TRUE); */
-/*           gtk_window_set_focus (GTK_WINDOW (venta->window), venta->forma_pago); */
-/*           gtk_widget_set_sensitive (GTK_WIDGET (gtk_builder_get_object (builder, "sencillo_entry")), FALSE); */
-/*           gtk_widget_set_sensitive (venta->sell_button, TRUE); */
-
-/*           break; */
-/*         } */
-/*       return; */
-/*     } */
-
-/*   window = gtk_window_new (GTK_WINDOW_TOPLEVEL); */
-/*   gtk_window_set_title (GTK_WINDOW (window), "Tipo de Venta"); */
-/*   gtk_window_set_position (GTK_WINDOW (window), GTK_WIN_POS_CENTER_ALWAYS); */
-/*   gtk_widget_show (window); */
-/*   gtk_window_present (GTK_WINDOW (window)); */
-/*   //  gtk_window_set_transient_for (GTK_WINDOW (window), GTK_WINDOW (main_window)); */
-/*   gtk_window_set_resizable (GTK_WINDOW (window), FALSE); */
-/*   gtk_widget_set_size_request (window, 220, -1); */
-
-/*   g_signal_connect (G_OBJECT (window), "destroy", */
-/*                     G_CALLBACK (CancelarTipo), (gpointer)TRUE); */
-
-/*   /\*  g_signal_connect (G_OBJECT (window), "destroy", */
-/*       G_CALLBACK (CancelarTipo), (gpointer)TRUE); */
-/*   *\/ */
-/*   vbox = gtk_vbox_new (FALSE, 3); */
-/*   gtk_container_add (GTK_CONTAINER (window), vbox); */
-/*   gtk_widget_show (vbox); */
-
-/*   frame = gtk_frame_new ("Datos del Cliente"); */
-/*   gtk_box_pack_start (GTK_BOX (vbox), frame, FALSE, FALSE, 3); */
-/*   gtk_widget_show (frame); */
-
-/*   vbox2 = gtk_vbox_new (FALSE, 3); */
-/*   gtk_container_add (GTK_CONTAINER (frame), vbox2); */
-/*   gtk_widget_show (vbox2); */
-
-/*   hbox = gtk_hbox_new (FALSE, 3); */
-/*   gtk_box_pack_start (GTK_BOX (vbox2), hbox, FALSE, FALSE, 3); */
-/*   gtk_widget_show (hbox); */
-
-/*   label = gtk_label_new ("Rut: "); */
-/*   gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 3); */
-/*   gtk_widget_show (label); */
-
-/*   venta->venta_rut = gtk_entry_new (); */
-/*   gtk_box_pack_end (GTK_BOX (hbox), venta->venta_rut, FALSE, FALSE, 3); */
-/*   gtk_widget_show (venta->venta_rut); */
-
-/*   gtk_entry_set_editable (GTK_ENTRY (venta->venta_rut), FALSE); */
-
-/*   g_signal_connect (G_OBJECT (venta->venta_rut), "activate", */
-/*                     G_CALLBACK (SelectClient), NULL); */
-
-/*   gtk_window_set_focus (GTK_WINDOW (window), venta->venta_rut); */
-
-/*   hbox = gtk_hbox_new (FALSE, 3); */
-/*   gtk_box_pack_start (GTK_BOX (vbox2), hbox, FALSE, FALSE, 3); */
-/*   gtk_widget_show (hbox); */
-
-/*   label = gtk_label_new ("Nombre: "); */
-/*   gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 3); */
-/*   gtk_widget_show (label); */
-
-/*   hbox = gtk_hbox_new (FALSE, 3); */
-/*   gtk_box_pack_start (GTK_BOX (vbox2), hbox, FALSE, FALSE, 3); */
-/*   gtk_widget_show (hbox); */
-
-/*   venta->venta_nombre = gtk_label_new (""); */
-/*   gtk_box_pack_start (GTK_BOX (hbox), venta->venta_nombre, FALSE, FALSE, 3); */
-/*   gtk_widget_show (venta->venta_nombre); */
-
-/*   hbox = gtk_hbox_new (FALSE, 3); */
-/*   gtk_box_pack_start (GTK_BOX (vbox2), hbox, FALSE, FALSE, 3); */
-/*   gtk_widget_show (hbox); */
-
-/*   label = gtk_label_new ("Dirección: "); */
-/*   gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 3); */
-/*   gtk_widget_show (label); */
-
-/*   hbox = gtk_hbox_new (FALSE, 3); */
-/*   gtk_box_pack_start (GTK_BOX (vbox2), hbox, FALSE, FALSE, 3); */
-/*   gtk_widget_show (hbox); */
-
-/*   venta->venta_direccion = gtk_label_new (""); */
-/*   gtk_box_pack_start (GTK_BOX (hbox), venta->venta_direccion, FALSE, FALSE, 3); */
-/*   gtk_widget_show (venta->venta_direccion); */
-
-/*   hbox = gtk_hbox_new (FALSE, 3); */
-/*   gtk_box_pack_start (GTK_BOX (vbox2), hbox, FALSE, FALSE, 3); */
-/*   gtk_widget_show (hbox); */
-
-/*   label = gtk_label_new ("Fono: "); */
-/*   gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 3); */
-/*   gtk_widget_show (label); */
-
-/*   hbox = gtk_hbox_new (FALSE, 3); */
-/*   gtk_box_pack_start (GTK_BOX (vbox2), hbox, FALSE, FALSE, 3); */
-/*   gtk_widget_show (hbox); */
-
-/*   venta->venta_fono = gtk_label_new (""); */
-/*   gtk_box_pack_start (GTK_BOX (hbox), venta->venta_fono, FALSE, FALSE, 3); */
-/*   gtk_widget_show (venta->venta_fono); */
-
-
-/*   hbox = gtk_hbox_new (FALSE, 3); */
-/*   gtk_box_pack_end (GTK_BOX (vbox), hbox, FALSE, FALSE, 3); */
-/*   gtk_widget_show (hbox); */
-
-/*   button = gtk_button_new_from_stock (GTK_STOCK_CANCEL); */
-/*   gtk_box_pack_start (GTK_BOX (hbox), button, FALSE, FALSE, 3); */
-/*   gtk_widget_show (button); */
-
-/*   g_signal_connect (G_OBJECT (button), "clicked", */
-/*                     G_CALLBACK (CancelarTipo), (gpointer)TRUE); */
-
-/*   button = gtk_button_new_with_label ("Vender"); */
-/*   gtk_box_pack_end (GTK_BOX (hbox), button, FALSE, FALSE, 3); */
-/*   gtk_widget_show (button); */
-
-/*   /\* g_signal_connect (G_OBJECT (button), "clicked", *\/ */
-/*   /\*                   G_CALLBACK (Vender), (gpointer)window); *\/ */
-
-/*   if (strcmp (tipo_venta, "cheque") == 0) */
-/*     { */
-/*       frame = gtk_frame_new ("Datos Cheque"); */
-/*       gtk_box_pack_start (GTK_BOX (vbox), frame, FALSE, FALSE, 3); */
-/*       gtk_widget_show (frame); */
-
-/*       vbox2 = gtk_vbox_new (FALSE, 3); */
-/*       gtk_container_add (GTK_CONTAINER (frame), vbox2); */
-/*       gtk_widget_show (vbox2); */
-
-/*       hbox = gtk_hbox_new (FALSE, 3); */
-/*       gtk_box_pack_start (GTK_BOX (vbox2), hbox, FALSE, FALSE, 3); */
-/*       gtk_widget_show (hbox); */
-
-/*       label = gtk_label_new ("Serie: "); */
-/*       gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 3); */
-/*       gtk_widget_show (label); */
-
-/*       venta->cheque_serie = gtk_entry_new_with_max_length (10); */
-/*       gtk_box_pack_end (GTK_BOX (hbox), venta->cheque_serie, FALSE, FALSE, 3); */
-/*       gtk_widget_show (venta->cheque_serie); */
-
-/*       g_signal_connect (G_OBJECT (venta->venta_rut), "changed", */
-/*                         G_CALLBACK (SendCursorTo), (gpointer)venta->cheque_serie); */
-
-/*       hbox = gtk_hbox_new (FALSE, 3); */
-/*       gtk_box_pack_start (GTK_BOX (vbox2), hbox, FALSE, FALSE, 3); */
-/*       gtk_widget_show (hbox); */
-
-/*       label = gtk_label_new ("Número: "); */
-/*       gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 3); */
-/*       gtk_widget_show (label); */
-
-/*       venta->cheque_numero = gtk_entry_new (); */
-/*       gtk_box_pack_end (GTK_BOX (hbox), venta->cheque_numero, FALSE, FALSE, 3); */
-/*       gtk_widget_show (venta->cheque_numero); */
-
-/*       g_signal_connect (G_OBJECT (venta->cheque_serie), "activate", */
-/*                         G_CALLBACK (SendCursorTo), (gpointer)venta->cheque_numero); */
-
-/*       hbox = gtk_hbox_new (FALSE, 3); */
-/*       gtk_box_pack_start (GTK_BOX (vbox2), hbox, FALSE, FALSE, 3); */
-/*       gtk_widget_show (hbox); */
-
-/*       label = gtk_label_new ("Banco: "); */
-/*       gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 3); */
-/*       gtk_widget_show (label); */
-
-/*       venta->cheque_banco = gtk_entry_new_with_max_length (50); */
-/*       gtk_box_pack_end (GTK_BOX (hbox), venta->cheque_banco, FALSE, FALSE, 3); */
-/*       gtk_widget_show (venta->cheque_banco); */
-
-/*       g_signal_connect (G_OBJECT (venta->cheque_numero), "activate", */
-/*                         G_CALLBACK (SendCursorTo), (gpointer)venta->cheque_banco); */
-
-/*       hbox = gtk_hbox_new (FALSE, 3); */
-/*       gtk_box_pack_start (GTK_BOX (vbox2), hbox, FALSE, FALSE, 3); */
-/*       gtk_widget_show (hbox); */
-
-/*       label = gtk_label_new ("Plaza: "); */
-/*       gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 3); */
-/*       gtk_widget_show (label); */
-
-/*       venta->cheque_plaza = gtk_entry_new_with_max_length (50); */
-/*       gtk_box_pack_end (GTK_BOX (hbox), venta->cheque_plaza, FALSE, FALSE, 3); */
-/*       gtk_widget_show (venta->cheque_plaza); */
-
-/*       g_signal_connect (G_OBJECT (venta->cheque_banco), "activate", */
-/*                         G_CALLBACK (SendCursorTo), (gpointer)venta->cheque_plaza); */
-
-/*       hbox = gtk_hbox_new (FALSE, 3); */
-/*       gtk_box_pack_start (GTK_BOX (vbox2), hbox, FALSE, FALSE, 3); */
-/*       gtk_widget_show (hbox); */
-
-/*       label = gtk_label_new ("Fecha: "); */
-/*       gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 3); */
-/*       gtk_widget_show (label); */
-
-/*       button_cheque = gtk_toggle_button_new (); */
-/*       gtk_toggle_button_set_mode (GTK_TOGGLE_BUTTON (button_cheque), FALSE); */
-/*       gtk_box_pack_end (GTK_BOX (hbox), button_cheque, FALSE, FALSE, 3); */
-/*       gtk_widget_show (button_cheque); */
-
-/*       g_signal_connect (G_OBJECT (venta->cheque_plaza), "activate", */
-/*                         G_CALLBACK (SendCursorTo), (gpointer)button_cheque); */
-
-/*       SetChequeDate (NULL, (gpointer)button_cheque); */
-
-/*       g_signal_connect (G_OBJECT (button_cheque), "toggled", */
-/*                         G_CALLBACK (SelectChequeDate), NULL); */
-
-/*       hbox = gtk_hbox_new (FALSE, 3); */
-/*       gtk_box_pack_start (GTK_BOX (vbox2), hbox, FALSE, FALSE, 3); */
-/*       gtk_widget_show (hbox); */
-
-/*       label = gtk_label_new ("Monto: "); */
-/*       gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 3); */
-/*       gtk_widget_show (label); */
-
-/*       venta->cheque_monto = gtk_entry_new_with_max_length (50); */
-/*       gtk_box_pack_end (GTK_BOX (hbox), venta->cheque_monto, FALSE, FALSE, 3); */
-/*       gtk_widget_show (venta->cheque_monto); */
-
-/*       g_signal_connect (G_OBJECT (button_cheque), "toggled", */
-/*                         G_CALLBACK (SendCursorTo), (gpointer)venta->cheque_monto); */
-
-/*       g_signal_connect (G_OBJECT (venta->cheque_monto), "activate", */
-/*                         G_CALLBACK (SendCursorTo), (gpointer)button); */
-
-/*       venta->tipo_venta = CHEQUE; */
-/*     } */
-/*   else if (strcmp (tipo_venta, "tarjeta") == 0) */
-/*     { */
-/*       frame = gtk_frame_new ("Datos Tarjeta"); */
-/*       gtk_box_pack_start (GTK_BOX (vbox), frame, FALSE, FALSE, 3); */
-/*       gtk_widget_show (frame); */
-
-/*       vbox2 = gtk_vbox_new (FALSE, 3); */
-/*       gtk_container_add (GTK_CONTAINER (frame), vbox2); */
-/*       gtk_widget_show (vbox2); */
-
-/*       hbox = gtk_hbox_new (FALSE, 3); */
-/*       gtk_box_pack_start (GTK_BOX (vbox2), hbox, FALSE, FALSE, 3); */
-/*       gtk_widget_show (hbox); */
-
-/*       label = gtk_label_new ("Institución: "); */
-/*       gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 3); */
-/*       gtk_widget_show (label); */
-
-/*       venta->tarjeta_inst = gtk_entry_new_with_max_length (50); */
-/*       gtk_widget_set_size_request (venta->tarjeta_inst, 130, -1); */
-/*       gtk_box_pack_end (GTK_BOX (hbox), venta->tarjeta_inst, FALSE, FALSE, 3); */
-/*       gtk_widget_show (venta->tarjeta_inst); */
-
-/*       g_signal_connect (G_OBJECT (venta->venta_rut), "changed", */
-/*                         G_CALLBACK (SendCursorTo), (gpointer)venta->tarjeta_inst); */
-
-/*       hbox = gtk_hbox_new (FALSE, 3); */
-/*       gtk_box_pack_start (GTK_BOX (vbox2), hbox, FALSE, FALSE, 3); */
-/*       gtk_widget_show (hbox); */
-
-/*       label = gtk_label_new ("Nº de Tarjeta: "); */
-/*       gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 3); */
-/*       gtk_widget_show (label); */
-
-/*       venta->tarjeta_numero = gtk_entry_new_with_max_length (20); */
-/*       gtk_widget_set_size_request (venta->tarjeta_numero, 130, -1); */
-/*       gtk_box_pack_end (GTK_BOX (hbox), venta->tarjeta_numero, FALSE, FALSE, 3); */
-/*       gtk_widget_show (venta->tarjeta_numero); */
-
-/*       g_signal_connect (G_OBJECT (venta->tarjeta_inst), "activate", */
-/*                         G_CALLBACK (SendCursorTo), (gpointer)venta->tarjeta_numero); */
-
-/*       hbox = gtk_hbox_new (FALSE, 3); */
-/*       gtk_box_pack_start (GTK_BOX (vbox2), hbox, FALSE, FALSE, 3); */
-/*       gtk_widget_show (hbox); */
-
-/*       label = gtk_label_new ("Fecha Venc: "); */
-/*       gtk_box_pack_start (GTK_BOX (hbox), label, FALSE, FALSE, 3); */
-/*       gtk_widget_show (label); */
-
-/*       venta->tarjeta_fecha = gtk_entry_new_with_max_length (7); */
-/*       gtk_widget_set_size_request (venta->tarjeta_fecha, 130, -1); */
-/*       gtk_box_pack_end (GTK_BOX (hbox), venta->tarjeta_fecha, FALSE, FALSE, 3); */
-/*       gtk_widget_show (venta->tarjeta_fecha); */
-
-/*       g_signal_connect (G_OBJECT (venta->tarjeta_numero), "activate", */
-/*                         G_CALLBACK (SendCursorTo), (gpointer)venta->tarjeta_fecha); */
-
-/*       g_signal_connect (G_OBJECT (venta->tarjeta_fecha), "activate", */
-/*                         G_CALLBACK (SendCursorTo), (gpointer)button); */
-
-/*       venta->tipo_venta = TARJETA; */
-/*     } */
-/*   else if (strcmp (tipo_venta, "credito") == 0) */
-/*     { */
-/*       venta->tipo_venta = CREDITO; */
-
-/*       g_signal_connect (G_OBJECT (venta->venta_rut), "changed", */
-/*                         G_CALLBACK (SendCursorTo), (gpointer)button); */
-
-/*     } */
-/* } */
-
-/* void */
-/* TiposVenta (GtkWidget *widget, gpointer data) */
-/* { */
-/*   GtkWidget *vbox; */
-/*   GtkWidget *button; */
-
-/*   if (widget != NULL && strcmp (g_strdup (gtk_entry_get_text (GTK_ENTRY (widget))), "") != 0) */
-/*     SendCursorTo (widget, data); */
-/*   else */
-/*     { */
-/*       gtk_widget_set_sensitive (venta->window, FALSE); */
-
-/*       tipos_window = gtk_window_new (GTK_WINDOW_TOPLEVEL); */
-/*       gtk_window_set_title (GTK_WINDOW (tipos_window), "Tipo de Venta"); */
-/*       gtk_window_set_position (GTK_WINDOW (tipos_window), GTK_WIN_POS_CENTER_ALWAYS); */
-/*       gtk_widget_show (tipos_window); */
-/*       gtk_window_present (GTK_WINDOW (tipos_window)); */
-/*       //      gtk_window_set_transient_for (GTK_WINDOW (tipos_window), GTK_WINDOW (venta->window)); */
-/*       gtk_window_set_resizable (GTK_WINDOW (tipos_window), FALSE); */
-/*       gtk_widget_set_size_request (tipos_window, 220, -1); */
-
-/*       g_signal_connect (G_OBJECT (venta->window), "destroy", */
-/*                         G_CALLBACK (CancelarTipo), (gboolean)FALSE); */
-
-/*       vbox = gtk_vbox_new (FALSE, 3); */
-/*       gtk_container_add (GTK_CONTAINER (tipos_window), vbox); */
-/*       gtk_widget_show (vbox); */
-
-/*       button = gtk_button_new_with_label ("Crédito"); */
-/*       gtk_box_pack_start (GTK_BOX (vbox), button, FALSE, FALSE, 3); */
-/*       gtk_widget_show (button); */
-
-/*       gtk_window_set_focus (GTK_WINDOW (tipos_window), button); */
-
-/*       g_signal_connect (G_OBJECT (button), "clicked", */
-/*                         G_CALLBACK (FillDatosVenta), (gpointer)"credito"); */
-
-/*       button = gtk_button_new_with_label ("Cheque"); */
-/*       gtk_box_pack_start (GTK_BOX (vbox), button, FALSE, FALSE, 3); */
-/*       gtk_widget_show (button); */
-
-/*       g_signal_connect (G_OBJECT (button), "clicked", */
-/*                         G_CALLBACK (FillDatosVenta), (gpointer)"cheque"); */
-
-/*       button = gtk_button_new_from_stock (GTK_STOCK_CANCEL); */
-/*       gtk_box_pack_start (GTK_BOX (vbox), button, FALSE, FALSE, 3); */
-/*       gtk_widget_show (button); */
-
-/*       g_signal_connect (G_OBJECT (button), "clicked", */
-/*                         G_CALLBACK (CancelarTipo), (gpointer)FALSE); */
-/*     } */
-/* } */
 
 void
 ventas_win ()
@@ -3678,4 +3273,10 @@ on_btn_nullify_ok_clicked (GtkButton *button, gpointer data)
   selection = gtk_tree_view_get_selection(treeview_details);
 
   gtk_tree_selection_selected_foreach(selection, nullify_sale_datail, (gpointer)treeview_details);
+}
+
+void
+on_btn_cash_box_open_clicked (void)
+{
+
 }
